# btc-heritage

./: .gitignore  Cargo.toml  LICENSE  LICENSE.txt  README.md  SECURITY.md  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: hardware-wallet-support.md
.github/workflows/: release.yml
crates/btc-heritage/: Cargo.toml
crates/btc-heritage-keys/: Cargo.toml
crates/btc-heritage-keys/src/: lib.rs
crates/btc-heritage-keys/src/database/: mod.rs
crates/btc-heritage-keys/src/database/memory/: bdk.rs
crates/btc-heritage-wallet/: Cargo.toml
crates/btc-heritage-wallet/src/: errors.rs  heir.rs  heir_wallet.rs  heritage_wallet_priv.rs  heritage_wallet_pub.rs  lib.rs  psbt_summary.rs  traits.rs  wallet.rs
crates/btc-heritage-wallet/src/database/: dbitem.rs  errors.rs  mod.rs  utils.rs
crates/btc-heritage-wallet/src/database/dbschema/: mod.rs  v0tov1.rs
crates/btc-heritage-wallet/src/database/heritage_db/: bdk.rs  heritage.rs  mod.rs
crates/btc-heritage-wallet/src/heritage_provider/: mod.rs
crates/btc-heritage-wallet/src/heritage_provider/local/: mod.rs
crates/btc-heritage-wallet/src/heritage_provider/local_wallet/: mod.rs
crates/btc-heritage-wallet/src/heritage_provider/service/: mod.rs
crates/btc-heritage-wallet/src/heritage_service_client/: mod.rs
crates/btc-heritage-wallet/src/key_provider/: mod.rs
crates/btc-heritage-wallet/src/key_provider/ledger_hww/: mod.rs  policy.rs
crates/btc-heritage-wallet/src/key_provider/local_key/: mod.rs
crates/btc-heritage-wallet/src/online_wallet/: mod.rs
crates/btc-heritage-wallet/src/online_wallet/local/: mod.rs
crates/btc-heritage-wallet/src/online_wallet/local_heritage_wallet/: mod.rs
crates/btc-heritage-wallet/src/online_wallet/service/: mod.rs
crates/btc-heritage-wallet/src/service_client/: mod.rs  tokens.rs  types.rs
crates/btc-heritage-wallet/src/wallet_offline/: mod.rs
crates/btc-heritage-wallet/src/wallet_offline/ledger_hww/: mod.rs  policy.rs
crates/btc-heritage-wallet/src/wallet_offline/local_key/: mod.rs
crates/btc-heritage-wallet/src/wallet_online/: mod.rs
crates/btc-heritage-wallet/src/wallet_online/local_heritage_wallet/: mod.rs
crates/btc-heritage-wallet/src/wallet_online/service/: mod.rs
crates/btc-heritage-wallet/src/wallet_priv/: mod.rs
crates/btc-heritage-wallet/src/wallet_priv/ledger_hww/: mod.rs
crates/btc-heritage-wallet/src/wallet_priv/local_key/: mod.rs
crates/btc-heritage-wallet/src/wallet_pub/: mod.rs
crates/btc-heritage-wallet/src/wallet_pub/local_heritage_wallet/: mod.rs
crates/btc-heritage/src/: errors.rs  lib.rs  utils.rs
crates/btc-heritage/src/account_xpub/: mod.rs
crates/btc-heritage/src/database/: mod.rs  paginate.rs
crates/btc-heritage/src/database/memory/: bdk.rs  heritage.rs  mod.rs
crates/btc-heritage/src/heritage_config/: heirtypes.rs  mod.rs  v1.rs
crates/btc-heritage/src/heritage_wallet/: backup.rs  mod.rs  online.rs  types.rs
crates/btc-heritage/src/heritagewallet/: mod.rs  online.rs
crates/btc-heritage/src/subwallet_config/: mod.rs
crates/heritage-api-client/: Cargo.toml
crates/heritage-api-client/src/: auth.rs  client.rs  errors.rs  lib.rs  types.rs
crates/heritage-cli/: Cargo.toml  README.md
crates/heritage-cli/src/: commands.rs  display.rs  main.rs  spendflow.rs  utils.rs
crates/heritage-cli/src/commands/: commands.rs  mod.rs  subcmd_heir.rs  subcmd_heirwallet.rs  subcmd_local_wallet.rs  subcmd_service.rs  subcmd_service_heir.rs  subcmd_service_wallet.rs  subcmd_wallet.rs  subcmd_wallet_addresses.rs  subcmd_wallet_axpubs.rs  subcmd_wallet_commons.rs  subcmd_wallet_descriptors.rs  subcmd_wallet_heritage_config.rs  subcmd_wallet_ledger_policy.rs
crates/heritage-service-api-client/: Cargo.toml
crates/heritage-service-api-client/src/: auth.rs  client.rs  errors.rs  lib.rs  types.rs
crates/heritage-service-api-client/src/async_client/: auth.rs  client.rs  mod.rs
crates/heritage-service-api-client/src/blocking_client/: auth.rs  client.rs  mod.rs
docs/: .$schemas.drawio.bkp  .cli-design.txt.kate-swp  cli-design.txt  cli-test-sequence.txt  experiments.txt  schemas.drawio
nix/: flake.nix
src/: lib.rs  utils.rs
src/accountxpub/: mod.rs
src/database/: mod.rs
src/database/memory/: heritage.rs  mod.rs
src/heritageconfig/: heirtypes.rs  mod.rs  v1.rs
src/heritagewallet/: mod.rs  online.rs  types.rs
src/subwalletconfig/: mod.rs
