[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.79"
edition = "2021"
authors = ["Crypto7 <john@crypto7.world>"]
license = "MIT"
repository = "https://github.com/crypto7world/btc-heritage.git"

[workspace.dependencies]
bdk = { version = "0.29", default-features = false, features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
sled = "0.34"
open = "5.2.0"
