[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.21.0"
rust-version = "1.81"
edition = "2021"
authors = ["Crypto7 <john@crypto7.world>"]
license = "MIT"
repository = "https://github.com/crypto7world/btc-heritage.git"

[workspace.dependencies]
bdk = { version = "0.29", default-features = false, features = ["std"] }

bitcoin = "0.31"
miniscript = "11.0"
ledger_bitcoin_client = "0.4"

reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

regex = "1.10.5"

thiserror = "1.0"
log = "0.4"
