[package]
name = "btc-heritage-keys"
version = "0.1.0"
description = "A crate implementing primitives for handling privates keys operation, works in tandem with the btc-heritage crate"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip39 = "2.0.0"
bitcoin = "0.30.2"
log = { workspace = true }
thiserror = { workspace = true }
