[package]
name = "btc-heritage-wallet"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btc-heritage = { path = "../btc-heritage" }

bitcoin = { workspace = true }
miniscript = { workspace = true }
ledger_bitcoin_client = { workspace = true }

ledger-transport-hid = "0.11"
ledger-apdu = "0.11"

bip39 = "2.0.0"

serde = { workspace = true }
serde_json = { workspace = true }
redb = { workspace = true }
reqwest = { workspace = true }
open = { workspace = true }

dirs-next = "2.0"
log = { workspace = true }
thiserror = { workspace = true }
