[package]
name = "btc-heritage-wallet"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btc-heritage = { path = "../btc-heritage" }
heritage-api-client = { path = "../heritage-api-client" }

bitcoin = { workspace = true }
miniscript = { workspace = true }
ledger_bitcoin_client = { workspace = true }
bip39 = "2.0.0"

ledger-transport-hid = "0.11"
ledger-apdu = "0.11"

redb = { workspace = true }
regex = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

log = { workspace = true }
thiserror = { workspace = true }
