[package]
name = "btc-heritage-wallet"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btc-heritage = { path = "../btc-heritage", features = ["online"] }
heritage-service-api-client = { path = "../heritage-service-api-client" }

bitcoin = { workspace = true }
miniscript = { workspace = true }
ledger_bitcoin_client = { workspace = true }
bip39 = "2.0.0"

ledger-transport-hid = "0.11"
ledger-apdu = "0.11"

redb = { workspace = true }
regex = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

log = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
btc-heritage = { path = "../btc-heritage", features = ["psbt-tests", "database-tests"] }
tempfile = "3"
