[package]
name = "heritage-cli"
version = "0.1.0"
description = "The Heritage wallet CLI, a Bitcoin Taproot wallet managing on-chain inheritance of bitcoins"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btc-heritage-wallet= { path = "../btc-heritage-wallet" }
clap = { version = "4.5", features = ["derive", "env"] }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
env_logger = "0.11"
rpassword = "7.3"
dirs-next = "2.0"
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
