[package]
name = "heritage-service-api-client"
version = "0.1.1"
description = "The Heritage service API client"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btc-heritage= { path = "../btc-heritage" }

serde = { workspace = true }
serde_json = { workspace = true, optional = true }

reqwest = { workspace = true, optional = true }
open = { workspace = true, optional = true }
regex = { workspace = true }

log = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["client"]
client = ["reqwest", "open", "serde_json"]
